# oarconv

./: .gitignore  GeneralTool.cpp  GeneralTool.h  INSTALL  LICENSE  LogDocTool.h  Makefile  MaterialTool.cpp  MaterialTool.h  MeshMaker.cpp  MeshMaker.h  OARDirectory.h  OARGlobal.h  OARTool.cpp  OARTool.h  PrimMesher.cpp  PrimMesher.h  PrimShape.cpp  PrimShape.h  README  README.md  SculptMesher.cpp  SculptMesher.h  SculptScale.xlsx  TerrainMesher.cpp  TerrainMesher.h  TerrainTool.cpp  TerrainTool.h  TreeTool.cpp  TreeTool.h  joint_template.xml  mktree.cpp  oarconv.cpp  oarconv.h  oarconv_help.cpp  oarconv_help.h
Tree_Grass/: tree.sh
UE/: memo_20260203.txt
UE/Asesst/: NewMaterial.gltf
Unity3D/: UnityChanShaderVer123_forUnity5.4.unitypackage
assets/: 00000000-0000-0000-0000-000000000000.jp2  00000000-0000-0000-0000-000000000000.tga  0004b67d-f47c-4c0d-ab8e-e47390cc2247_texture.jp2  0021043b-6af4-4223-80df-e38b86d263da_texture.jp2  00241639-e1ef-45cc-8940-e805191e1472_texture.jp2  0029c3e5-9e6d-4802-b16d-4f784843fc79_clothing.txt  002a1840-a3b7-4771-afb2-58badd7f7c01_texture.jp2  00540fca-e4fb-4578-a697-bf3aafeb4396_texture.jp2  00b4687b-a3ec-45e7-b3f7-fa292aed28f5_texture.jp2  00dc152e-1c77-4df9-bf10-1b8bea0fa25f_texture.jp2  013c08c1-525e-4518-b521-d70032278230_object.xml  01403829-b619-46f3-9806-03c27fd39500_object.xml  0203b187-2327-4652-87f8-56314087fb5a_object.xml  021c9842-12b9-4bcf-8f6a-5629ce491815_texture.jp2  023e7630-d274-466c-a8d2-ce760d240bfa_notecard.txt  028f6bcb-1266-4ac6-9e5d-4983ddf09604_texture.jp2  02e3fff9-1be8-4051-aff6-5b4ebc1bc286_texture.jp2  035f425f-4280-485a-98f7-3978c4510710_texture.jp2  0452407d-dcc5-4377-9fba-49cfb33112df.jp2  047eae6f-87ad-4118-9849-811f8f25ee38_texture.jp2  04a216b5-dc80-4301-bcbe-9f5d2334a465_script.lsl  0509ebda-ccc6-448e-812d-9529452b123f.jp2  0523c7ab-b9b2-4d8c-abed-033ffb58751e_object.xml  055caf44-7751-4a33-b1ed-912a5d479196_clothing.txt  057483d0-5c1a-4ed0-91f6-481820fc2806_texture.jp2  05aa564d-0252-4a84-b11d-a37668b9ba93_texture.jp2  06203c5f-c397-4674-baf9-4eb1d23ec12c_texture.jp2  0659608f-d31e-4ac5-a253-4860f6bc853b_script.lsl  06663d09-ee2e-4e55-b225-b1fcc60cf8bc_texture.jp2  07242b6c-eae6-4a31-8328-651dcad74344_notecard.txt  075425ec-1978-47c1-ad1b-4ede18a8d5b8_clothing.txt  07ba6695-a144-49b6-9e6a-e019d5cbe1be_texture.jp2  07d01365-9e26-4599-aff6-5166f2ad5717_texture.jp2  088c8fff-7044-446a-bcc2-b9e60c051ea9_texture.jp2  (+922 more)
conf/: Makefile  Makefile.am  oarconv.sh
(+247 files in other folders)
